# ImperialAstronomer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.ps1
HeaderFiles/: AssistantWidget.h  HomeWidget.h  LeagueAPI.h  LoadingWidget.h  MasterWidget.h  MatchHistoryWidget.h  OtherFunctionWidget.h  WindowsAPI.h
InterfaceFiles/: AssistantInterface.ui  HomeInterface.ui  LoadingInterface.ui  MasterInterface.ui  MatchHistoryInterface.ui  MessageBoxInterface.ui  OtherFunctionInterface.ui
ResourceFiles/: Resources.qrc
ResourceFiles/BasicFiles/: Icon.rc  StyleSheet.css
ResourceFiles/DataFiles/: champion.json  item14.16.json  item14.18.json  item14.19.json  item14.20.json  item14.21.json  item14.22.json  item14.23.json  item14.24.json  item15.1.json  item15.2.json  item15.3.json  item15.4.json  queue.json  runesReforged14.19.json  runesReforged14.20.json  runesReforged14.24.json  runesReforged15.1.json  runesReforged15.2.json  runesReforged15.4.json  skins.json  versions.json
ScriptFiles/: script.py
SourceFiles/: AssistantWidget.cpp  HomeWidget.cpp  LeagueAPI.cpp  LoadingWidget.cpp  Main.cpp  MasterWidget.cpp  MatchHistoryWidget.cpp  OtherFunctionWidget.cpp
